--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    color: blueviolet;
+    text-decoration: underline;
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    color: blueviolet;
+}
+
+h5 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: blueviolet;
+}
+
+
 body {
     background-color: antiquewhite;
+}
+
+
+
+.button {
+    background-color: aqua;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.container {
+    display: flex;
+    margin-bottom: -5px;
+    
+    
 }
